# freshell

./: .env.example  .gitignore  .kata.toml  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TASK.md  TMUX-SEMANTICS-PROPOSAL.md  electron-builder.yml  index.html  package-lock.json  package.json  run-rust-server.sh  smoke-test-comprehensive.md  tailwind.config.js  tailwind.config.wizard.js  tsconfig.electron-preload.json  tsconfig.electron.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vite.wizard.config.ts  vitest.codex-real-provider-smoke.config.ts  vitest.config.ts  vitest.electron.config.ts  vitest.opencode-serve-real-provider-smoke.config.ts  vitest.server.config.ts
.cargo/: config.toml
.opencode/: .freshell-mcp-state.json  opencode.json
.plans/: clickable-terminal-urls-tests.md  clickable-terminal-urls.md
crates/freshell-activity/: Cargo.toml
crates/freshell-activity/src/: claude.rs  codex.rs  idle.rs  ledger.rs  lib.rs  signal.rs
crates/freshell-activity/src/amplifier/: mod.rs  reducer.rs  tailer.rs  tracker.rs
crates/freshell-api/: Cargo.toml
crates/freshell-api/src/: lib.rs
crates/freshell-codex/: Cargo.toml
crates/freshell-codex/src/: app_server.rs  durability.rs  events.rs  json_scan.rs  launch_lifecycle.rs  launch_plan.rs  lib.rs  model.rs  protocol.rs  remote_proxy.rs  remote_proxy_envelope.rs  remote_proxy_side_effects.rs  transport.rs
crates/freshell-codex/tests/: app_server_drive.rs  completion_gating.rs  interrupt_rpc.rs  launch_lifecycle.rs  remote_proxy_relay.rs
crates/freshell-freshagent/: Cargo.toml
crates/freshell-freshagent/src/: claude.rs  codex.rs  lib.rs  opencode_ws.rs  pane_ops.rs  snapshot.rs  terminal_tabs.rs
crates/freshell-opencode/: Cargo.toml
crates/freshell-opencode/src/: events.rs  lib.rs  model.rs  serve.rs  transport.rs
crates/freshell-opencode/tests/: serve_health_bounded.rs  serve_idle_edge.rs
crates/freshell-platform/: Cargo.toml
crates/freshell-platform/src/: cli_launch.rs  cli_launch_goldens.rs  detect.rs  elevated.rs  firewall.rs  lib.rs  mcp_inject.rs  mcp_inject_tests.rs  network.rs  path.rs  port_forward.rs  spawn.rs
crates/freshell-platform/tests/: detect_tests.rs  path_resolve_tests.rs  path_tests.rs  spawn_tests.rs  wsl_fallback_tests.rs
crates/freshell-protocol/: Cargo.toml
crates/freshell-protocol/src/: client_messages.rs  common.rs  lib.rs  server_messages.rs  settings.rs
crates/freshell-protocol/tests/: activity_extension.rs  inventory.rs  pane_reconcile.rs  roundtrip.rs  version.rs
crates/freshell-server/: Cargo.toml  build.rs
crates/freshell-server/src/: boot.rs  checkpoints.rs  diag.rs  existence.rs  extensions.rs  files.rs  instance_id.rs  logging.rs  main.rs  network.rs  proxy.rs  rate_limit.rs  screenshots.rs  serve_client.rs  session_directory.rs  session_metadata.rs  sessions.rs  settings.rs  settings_store.rs  tabs_snapshots.rs  tabs_snapshots_marker.rs  tabs_snapshots_restore_tests.rs  tabs_snapshots_selectors.rs  tabs_snapshots_tests.rs  terminals.rs  updater.rs
crates/freshell-server/tests/: diag01_diag03_logging.rs  diag02_client_log_emission.rs  safe11_term22_shutdown_reaping.rs
crates/freshell-sessions/: Cargo.toml
crates/freshell-sessions/src/: amplifier.rs  amplifier_locator.rs  directory_index.rs  indexer.rs  lib.rs  meta.rs  opencode_locator.rs  search.rs  text.rs  time.rs
crates/freshell-sessions/src/parse/: claude.rs  codex.rs  mod.rs  opencode.rs
crates/freshell-sessions/tests/: claude_fixture_parity.rs  codex_fixture_parity.rs  late_root_watcher_liveness.rs  opencode_sqlite.rs
crates/freshell-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/freshell-tauri/capabilities/: chooser.json  default.json  wizard.json
crates/freshell-tauri/frontend/: index.html
crates/freshell-tauri/src/: commands.rs  config.rs  external_url.rs  health.rs  hotkey.rs  lib.rs  main.rs  provisioning.rs  renderer_recovery.rs  server.rs  shim.rs  state_machine.rs  tray.rs  updater.rs  window_state.rs  windows.rs
crates/freshell-tauri/tests/: server_spawn_smoke.rs
crates/freshell-terminal/: Cargo.toml
crates/freshell-terminal/src/: barrier_scanner.rs  batch.rs  chunk_ring.rs  decode.rs  fragment.rs  framing.rs  lib.rs  output_queue.rs  pty.rs  registry.rs  replay_ring.rs  stub_3b.rs
crates/freshell-terminal/tests/: batch_wire_golden.rs  t1_golden_repro.rs  wsl_interop_live.rs
crates/freshell-ws/: Cargo.toml
crates/freshell-ws/src/: activity.rs  amplifier_association.rs  backpressure.rs  existence.rs  identity.rs  invariants.rs  lib.rs  opencode_association.rs  origin.rs  reconcile.rs  screenshot.rs  tabs.rs  tabs_persist.rs  tabs_persist_tests.rs  tabs_persist_validation.rs  terminal.rs
crates/freshell-ws/tests/: codex_managed_launch_e2e.rs  codex_session_ref_resume.rs  diag01_lifecycle_events.rs  freshagent_claude_kill_interrupt.rs  hello_timeout.rs  keepalive.rs  max_payload.rs  origin_policy.rs  pane_reconcile.rs  safe08_restore_diagnostics.rs  session_identity_frames.rs  term09_output_queue.rs
demo-projects/: README.md
docs/: debug-codex-app-server-leak.md  index.html  port-plan.md
electron/: desktop-config.ts  desktop-provisioning.ts  entry.ts  external-url.ts  hotkey.ts  launch-choice-handler.ts  launch-options.ts  main-process-logger.ts  main.ts  menu.ts  port-check.ts  preload.ts  renderer-recovery.ts  server-spawner.ts  startup.ts  tray.ts  types.ts  updater.ts  window-state.ts
port/: AGENTS.md  GOAL.md  HANDOFF.md  README.md  bundle.yaml
public/: sw.js
scripts/: assert-visible-first-acceptance.ts  assert-visible-first-audit-gate.ts  audit-codex-app-server-schema.ts  bundled-node-version.json  deploy-tab-diff.sh  deps-monthly.sh  dev-pr-queue.ts  launch.sh  measure-bandwidth.ts  prebuild-guard.ts  precheck.ts  prepare-bundled-node.ts  restore-tabs.sh  rotate-auth-token.sh  run-managed.sh  run-standard-tests.ts  run-with-default-port.ts  sandbox-build.sh  sandbox-selftest.sh  sandbox-test.sh  security-weekly.sh  selfhost-branch.ts  upload-electron-release-assets.ts  visible-first-audit.ts
server/: ai-prompts.ts  auth.ts  (+81 more)
(+1920 files in other folders)
