[package]
name = "freshell-protocol"
version = "0.1.0"
description = "Generated Rust wire types for the frozen freshell WebSocket protocol (WS_PROTOCOL_VERSION = 7). Serialization only, no logic. Shared by the Rust server and the equivalence oracle."
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Dev-only: used by the fidelity tests to validate serialized messages against
# the frozen JSON Schema contract (`jsonschema::validator_for`). Not part of the
# shipped crate surface. `default-features = false` drops the `resolve-http`
# feature (and with it reqwest + a rustls TLS stack): the roundtrip tests compile
# schemas from in-memory `Value`s and never fetch `$ref`s over HTTP, so the TLS
# stack is dead weight. Dropping it also removes a workspace-wide feature-unification
# hazard — jsonschema pulled `reqwest/rustls-no-provider` (a rustls WITHOUT a crypto
# provider), which panicked the loopback reqwest client that freshell-opencode's
# `real-transport` backend builds once that feature is enabled in the same build.
[dev-dependencies]
jsonschema = { version = "0.46", default-features = false }
