# freshell-server — the standalone headless/daemon binary (the SYSTEM-UNDER-TEST).
#
# Phase 3.4a scope: boot fast + clean on an ephemeral loopback port, read the
# env contract the oracle harness sets (PORT, AUTH_TOKEN, FRESHELL_BIND_HOST,
# isolated HOME), wire ONE axum app serving `/api/health` (freshell-api) + `/ws`
# (freshell-ws), and prove the connect handshake normalize-equals the original's
# (oracle T0). Terminal-over-wire, the rest of REST, sessions, and the harness
# providers are later steps.
[package]
name = "freshell-server"
version = "0.1.0"
description = "The standalone headless/daemon freshell server binary (the oracle system-under-test). Phase 3.4a: boots on an ephemeral loopback port under the harness env contract and serves /api/health + the connect-handshake /ws, normalize-equal to the original (oracle T0)."
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "freshell-server"
path = "src/main.rs"

[dependencies]
freshell-protocol = { path = "../freshell-protocol" }
freshell-ws = { path = "../freshell-ws" }
freshell-api = { path = "../freshell-api" }
# The fresh-agent REST surface (opencode slice) wired for the oracle T2 rung.
freshell-freshagent = { path = "../freshell-freshagent" }
# Platform detection (`/proc/version` → platform string) for the SPA boot payload.
freshell-platform = { path = "../freshell-platform" }
# Read-only coding-CLI transcript parsers, reused to back `GET /api/session-directory`
# (Follow-up 3.19): list + summarize sessions from the isolated provider homes.
freshell-sessions = { path = "../freshell-sessions" }
# The shared terminal registry constructed into WsState (terminals owned by
# terminalId across connections — the multi-client / reconnection backbone).
freshell-terminal = { path = "../freshell-terminal" }
# `sync` = the shared broadcast bus; `signal` = graceful SIGTERM shutdown (serve
# reaping); `time` = the bounded wait for the `ui.screenshot.result` round-trip.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
axum = "0.8"
serde_json = { workspace = true }
# Boot-scoped identifiers: `srv-<uuidv4>` / `boot-<uuidv4>`.
uuid = { version = "1", features = ["v4"] }
# The browser-pane HTTP reverse proxy (`/api/proxy/http/{port}/*`) forwards to a
# loopback target and streams the response back over plain HTTP (`stream`).
# `rustls-tls` additionally backs the R5 `GET /api/version` live GitHub update
# check (`updater.rs`), the one caller in this crate that needs real TLS
# (`https://api.github.com`) -- `rustls-tls` (not `-no-provider`) so a crypto
# provider (`ring`) is actually installed; see freshell-protocol's Cargo.toml
# for the `rustls-tls-no-provider` hazard this deliberately avoids.
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
# Decode the base64 PNG the UI returns in `ui.screenshot.result` before writing it
# (POST /api/screenshots). Already resolved in the workspace lock (no new download).
base64 = "0.22"
# `modifiedAt` ISO-8601 timestamps for the files read/stat/write responses
# (`stat.mtime.toISOString()` shape). Same config freshell-ws already uses.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Query-param structs for the files read/stat/complete endpoints.
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# `ServiceExt::oneshot` for in-process axum router handler tests (`sessions.rs`).
tower = { version = "0.5", features = ["util"] }
